Added SPA controller

--- a/AngularJSTest/Views/Shared/_Layout.cshtml
+++ b/AngularJSTest/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
 
     @Scripts.Render("~/bundles/jquery")
     <script src="~/Scripts/angular.js"></script>
-    <script src="~/Scripts/angular-bootstrap.js"></script>
+    @*<script src="~/Scripts/angular-bootstrap.js"></script>*@
     <script src="~/Scripts/ui-bootstrap-0.2.0.js"></script>
 
     <script src="~/App/App.js"></script>
