Added REST service

--- a/AngularJSTest/Views/SpaBooks/Index.cshtml
+++ b/AngularJSTest/Views/SpaBooks/Index.cshtml
@@ -14,9 +14,12 @@
     </div>
 </div>
 
+<script id="/SpaBooks/page3" type="text/ng-template">
+    @Html.Action("page3");
+</script>
 
 @section scripts
-{
+{</script>
     <script src="~/App/Models/Book.js"></script>
     <script src="~/App/Controllers/SpaBooksCtrl.js"></script>
 }
