--- a/AngularJSTest/Views/SpaBooks/SubMenu.cshtml
+++ b/AngularJSTest/Views/SpaBooks/SubMenu.cshtml
@@ -2,8 +2,9 @@
     <div class="navbar-inner">
         <div class="container">
             <ul class="nav">
-                <li><a href="#/page1">Page 1</a></li>
-                <li><a href="#/page2">Page 2</a></li>
+                <li><a href="#/page1">All client</a></li>
+                <li><a href="#/page2">Time</a></li>
+                <li><a href="#/page3">REST service</a></li>
                 <li><a href="#/other">Other page</a></li>
             </ul>
         </div>
