--- a/AngularJSTest/Views/Shared/_Layout.cshtml
+++ b/AngularJSTest/Views/Shared/_Layout.cshtml
@@ -88,7 +88,9 @@
     <script src="~/Scripts/angular.js"></script>
     @*<script src="~/Scripts/angular-bootstrap.js"></script>*@
     <script src="~/Scripts/ui-bootstrap-0.2.0.js"></script>
+    <script src="~/Scripts/angular-resource.js"></script>
 
+    <script src="~/App/Services/Books.js"></script>
     <script src="~/App/App.js"></script>
     <script src="~/App/Controllers/App.MainMenuCtrl.js"></script>
 
