--- a/AngularJSTest/Views/Shared/_Layout.cshtml
+++ b/AngularJSTest/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
         <hr>
 
         <footer>
-            <p>&copy; Company 2012</p>
+            <p>&copy; ABL - The Problem Solver 2013</p>
         </footer>
 
     </div>
