--- a/AngularJSTest/Views/SpaBooks/Page1.cshtml
+++ b/AngularJSTest/Views/SpaBooks/Page1.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="container">
-    <h4>This page retrieves each book using a REST service when it is needed</h4>
+    <h4>This page displays each book from a client side array</h4>
     <div class="span3 well">
         <ul class="nav">
             <li ng-repeat="book in books" ng-click="select(book)" class="btn-link">{{book.title}}</li>
