--- a/AngularJSTest/Views/SpaBooks/SubMenu.cshtml
+++ b/AngularJSTest/Views/SpaBooks/SubMenu.cshtml
@@ -5,6 +5,7 @@
                 <li><a href="#/page1">All client</a></li>
                 <li><a href="#/page2">Time</a></li>
                 <li><a href="#/page3">REST service</a></li>
+                <li><a href="#/page4">Edit</a></li>
                 <li><a href="#/other">Other page</a></li>
             </ul>
         </div>
