loadingOnAJAX and disabling navigation on edit

--- a/AngularJSTest/Views/SpaBooks/Page4.cshtml
+++ b/AngularJSTest/Views/SpaBooks/Page4.cshtml
@@ -1,36 +1,55 @@
 ﻿<div class="container">
     <h4>This page allowes for editing and saving of books</h4>
-    <div class="span3 well">
-        <ul class="nav">
-            <li ng-repeat="book in books | orderBy:'title'" ng-click="select(book)" class="btn-link">{{book.title}}</li>
-        </ul>
+    <form name="frm"
+        class="form-horizontal">
+        <div class="span3 well">
+            <ul class="nav">
+                <li data-ng-repeat="book in books | orderBy:'title'"
+                    data-ng-click="select(book)" data-
+                    ng-class="{'btn-link': frm.$pristine}">{{book.title}}</li>
+            </ul>
 
-    </div>
-    <div class="span8">
-        <form class="form-horizontal" name="frm">
+        </div>
+        <div class="span8">
             <fieldset>
                 <div class="control-group">
                     <label class="control-label" for="id">Id:</label>
                     <div class="controls">
-                        <input type="text" id="title" ng-model="selected.id" class="span1" ng-readonly="true" />
+                        <input type="text"
+                            id="id"
+                            data-ng-model="selected.id"
+                            class="span1"
+                            data-ng-readonly="true" />
                     </div>
                 </div>
-                <div class="control-group" ng-class="{error: frm.title.$invalid}">
+                <div class="control-group"
+                    data-ng-class="{error: frm.title.$invalid}">
                     <label class="control-label" for="title">Title:</label>
                     <div class="controls">
-                        <input type="text" id="title" name="title" ng-model="selected.title" class="span4" ng-required="true" />
-                        <span ng-show="frm.title.$error.required" class="help-inline">Required</span>
+                        <input type="text" id="title" name="title"
+                            data-ng-model="selected.title" class="span4"
+                            data-ng-required="true" />
+                        <span data-ng-show="frm.title.$error.required"
+                            class="help-inline">Required</span>
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label" for="author">Author:</label>
                     <div class="controls">
-                        <input type="text" id="author" ng-model="selected.author" class="span4" />
+                        <input type="text" id="author"
+                            data-ng-model="selected.author"
+                            class="span4" />
                     </div>
                 </div>
-                <button ng-click="addNew()" class="btn">Add</button>
-                <button ng-click="save(selected)" ng-disabled="frm.$invalid" class="btn btn-primary">Save</button>
+                <button data-ng-click="addNew('frm')"
+                    data-ng-disabled="frm.$dirty"
+                    class="btn">
+                    Add</button>
+                <button data-ng-click="save(selected, 'frm')"
+                    data-ng-disabled="frm.$invalid || !frm.$dirty"
+                    class="btn btn-primary">
+                    Save</button>
             </fieldset>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
