Added SignalR page

--- a/AngularJSTest/Views/Shared/_Layout.cshtml
+++ b/AngularJSTest/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li class="dropdown" ng-class='{open: open}'>
+@*                        <li class="dropdown" ng-class='{open: open}'>
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" ng-click='open=!open'>Dropdown <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Action</a></li>
@@ -63,7 +63,7 @@
                                 <li><a href="#">Separated link</a></li>
                                 <li><a href="#">One more separated link</a></li>
                             </ul>
-                        </li>
+                        </li>*@
                         @Html.Partial("_LoginPartial")
                     </ul>
                 </div>
