Moved SignalR to a separate service

--- a/AngularJSTest/Views/Shared/_Layout.cshtml
+++ b/AngularJSTest/Views/Shared/_Layout.cshtml
@@ -83,6 +83,7 @@
     <script src="~/Scripts/angular-resource.js"></script>
 
     <script src="~/App/Services/Books.js"></script>
+    <script src="~/App/Services/SignalRBooks.js"></script>
     <script src="~/App/App.js"></script>
     <script src="~/App/Controllers/App.MainMenuCtrl.js"></script>
 
